Docker deployment setup, migrated client styles to Tailwind, and refactored microservices architecture